[FIX][FRONTEND] User role not changing on update (#755)
* Fix edit role component

* Clip overflowing text in users table

* Clip overflowing text in users table

* Change lowest role to name 'basic'

* Add check to prevent non-admin to demote/promote admin

--- a/frontend/app/styles/admin/_user-management.scss
+++ b/frontend/app/styles/admin/_user-management.scss
@@ -19,6 +19,8 @@ table.users {
 
   td {
     vertical-align: top;
+    overflow-x: clip;
+    text-overflow: ellipsis;
 
     button.btn-link {
       padding: 0;
